# mcell_ng

./: .gitignore  CMakeLists.txt  README.md  diffuse.cpp  diffuse.hpp  geometry.cpp  geometry.hpp  io.cpp  io.hpp  mcell_ng.cpp  molecules.cpp  molecules.hpp  rng.cpp  rng.hpp  species.cpp  species.hpp  state.cpp  state.hpp  util.cpp  util.hpp
src/: CMakeLists.txt  diffuse.cpp  diffuse.hpp  error.hpp  geometry.cpp  geometry.hpp  io.cpp  io.hpp  mcell_ng.cpp  molecules.cpp  molecules.hpp  rng.hpp  species.cpp  species.hpp  state.cpp  state.hpp  util.cpp  util.hpp  vector.hpp
tests/: README.md  cube.m  sphere.mcsf
